modify server controller